fixed tailwind grid overlapping with css issue

--- a/assets/base.css
+++ b/assets/base.css
@@ -913,6 +913,7 @@ summary::-webkit-details-marker {
 
 @media screen and (min-width: 750px) {
   .product-grid {
+    display: flex;
     column-gap: var(--grid-desktop-horizontal-spacing);
     row-gap: var(--grid-desktop-vertical-spacing);
   }
