--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -4,9 +4,11 @@ product-info {
 
 .product {
   margin: 0;
+  display: flex;
 }
 
 .product.grid {
+  display: flex;
   gap: 0;
 }
 
